# codeprobe

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ai1ooirjqdathpkoqht7dvnci0uddldf  city.toml  manifest  prd_agent_adapter_architecture.md  prd_codeprobe_data_trust_and_enterprise_reporting.md  prd_improving_tool_flow_customizability_ease_of_use_observability.md  premortem_assess_zfc_refactor.md  premortem_codeprobe_data_trust_and_enterprise_reporting.md  pyproject.toml
.beads/: metadata.json
.claude/: prd-build.log.md  prd-build.state.json  rfc-dag.log.md  rfc-dag.state.json
.claude/prd-build-artifacts/: dag.json  plan-artifact-scorer.md  plan-event-types.md  plan-mine-presets.md  plan-rich-dashboard.md  plan-wire-events-executor.md  research-artifact-scorer.md  research-event-types.md  research-mine-presets.md  research-rich-dashboard.md  research-wire-events-executor.md
.claude/rfc-dag-artifacts/: dag.json  plan-csv-per-task-report.md  plan-llm-enrichment.md  plan-repeat-infrastructure.md  plan-sandbox-detection.md  plan-statistical-tests.md  plan-worktree-isolation.md  research-csv-per-task-report.md  research-llm-enrichment.md  research-repeat-infrastructure.md  research-sandbox-detection.md  research-statistical-tests.md  research-worktree-isolation.md
.gc/: events.jsonl
.gc/tmp/: prompt-claude-1-gc-14-2502508739.txt  prompt-claude-1-gc-141-2777844669.txt  prompt-claude-1-gc-20-4113296766.txt  prompt-claude-1-gc-22-3612331499.txt  prompt-claude-1-gc-280-1764367050.txt  prompt-claude-1-gc-390-1104985033.txt  prompt-claude-1-gc-405-3971687146.txt  prompt-claude-2-gc-23-2012969205.txt  prompt-claude-2-gc-381-1133248130.txt  prompt-claude-3-gc-24-136843630.txt  prompt-mayor-3185449997.txt
.github/workflows/: ci-latest.yml  ci.yml  publish.yml
.runtime/: session_id
acceptance/: __init__.py  converge.py  criteria.toml  loader.py  regression.py  release.py  verify.py
docs/: CALIBRATION.md  SNAPSHOT_REDACTION.md  acceptance-skip-audit.md  adapters.md  oracle_curator.md  prd_codeprobe.md  scoring_model.md  trace_quality.md
docs/discovery/: INTERVIEW_GUIDE.md  README.md  TEMPLATE.md
docs/onboarding/: architecture_tour.md
docs/prd/: appendix_error_migration.md
docs/reviews/: v0.6.0-batch-a.md  v0.6.0-batch-b.md  v0.6.0-batch-c.md
docs/validation/: br7_ac_standards.md  br7_reviewer_prompt.md
docs/workflows/: cold-start.md  cross-repo.md  standard.md  with-agents.md
examples/dual/: README.md
prompts/: loop-mail.md  loop.md  one-shot.md  scoped-worker.md  worker.md
reports/: e2e-verification-2026-04-09.md
reviews/: codex-adversarial.md  codex-architecture.md  codex-feasibility.md  copilot-adversarial.md  copilot-architecture.md  copilot-feasibility.md  impl-codex-adversarial.md  impl-copilot-adversarial.md
scripts/: lint_zfc.allowlist.toml  lint_zfc.py
src/codeprobe/: __init__.py  __main__.py  acceptance_compiler.py  api.py  paths.py  tenant.py  tenant_lock.py
templates/: answer_json_verifier_lib.sh
tests/: conftest.py  test_acceptance_compiler.py  test_acceptance_compiler_integration.py  test_adapter_contracts.py  test_adapters.py  test_analysis.py  test_api.py  test_artifact_scorer.py  test_assess.py  test_auth_cmd.py  test_bias_detection.py  test_changed_symbols.py  test_checkpoint.py  test_checkpoint_scoring.py  test_cli.py  test_comprehension.py  test_config_loader.py  test_contrib.py  test_convergence.py  test_criteria_loader.py  test_ctrlc_integration.py  test_curator_backends.py  test_curator_core.py  test_curator_integration.py  test_curator_tiers.py  test_doctor_cmd.py  test_dual_adversarial_fixes.py  test_dual_composite.py  test_dual_e2e.py  test_dual_matrix.py  test_dual_scorer.py  test_dual_scoring_details.py  test_events.py  test_examples_dual.py  test_executor.py  test_executor_dual_isolation.py  test_executor_events.py  test_experiment_cmd.py  test_experiment_core.py  test_ground_truth_schema.py  (+73 more)
tests/adapters/: test_claude_write_mcp.py
tests/analysis/: test_interpret_regression.py  test_trace_quality.py
tests/calibration/: __init__.py  test_gate.py  test_stability.py
tests/capabilities/: README.md  __init__.py  conftest.py  context.md  fixtures.py  test_assess_capability.py  test_e2e_capability.py  test_mine_capability.py  test_run_capability.py  test_validate_capability.py
tests/cli/: baseline_bare_invocation.json  test_assess_calibration_surface.py  test_bare_invocation_matrix.py  test_cache_cmd.py  test_check_infra_drift.py  test_check_infra_offline.py  test_check_infra_preamble_drift.py  test_defaults_feature_flag.py  test_envelope.py  test_error_codes_catalog.py  test_error_codes_drift.py  test_error_migration.py  test_errors.py  test_json_flag_integration.py  test_no_bare_usage_errors.py  test_offline_e2e.py  test_output_mode.py  test_run_checkpoints.py  test_run_cmd_resolved_instruction.py  test_run_eval_trace_overflow.py  test_run_offline.py  test_run_trace_db.py  test_tenant_cli.py
tests/config/: test_defaults.py  test_resolve_narrative_source_llm.py
tests/fixtures/: aider_error.txt  aider_large_tokens.txt  aider_no_cost.txt  aider_normal.txt  claude_api_error_401.json  claude_malformed.json  claude_max_turns_error.json  claude_no_usage.json  claude_normal.json  claude_partial_usage.json  claude_with_tools.json  copilot_long.txt  copilot_no_tokens.txt  copilot_normal.txt  copilot_plain.txt  copilot_result_tokens.txt  copilot_with_usage.txt  snapshot_compat_sha.json
tests/llm/: test_backend_defaults.py  test_parity.py  test_registry.py  test_registry_reload.py
tests/mcp/: conftest.py  test_capabilities.py
tests/mining/: conftest.py  test_adapter_hygiene.py  test_ast_resolver.py  test_ast_scan.py  test_checkpoints.py  test_confidence.py  test_consensus.py  test_consensus_integration.py  test_cross_validate.py  test_curator_consensus.py  test_curator_tiers.py  test_dependency_upgrade.py  test_discover_related.py  test_discover_related_interactive.py  test_extractor_public_api.py  test_gitlab_adapter.py  test_http_helper.py  (+9 more)
(+356 files in other folders)
