[project]
name = "codeprobe"
version = "0.1.0a1"
description = "Benchmark AI coding agents against your own codebase. Mine real tasks from repo history, run agents, interpret results."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "codeprobe contributors" },
]
keywords = ["ai", "benchmark", "eval", "coding-agent", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0,<9",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0,<7"]
codex = ["openai>=1.66"]
all = ["pyyaml>=6.0,<7", "openai>=1.66"]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-PyYAML>=6.0,<7",
]

[project.scripts]
codeprobe = "codeprobe.cli:main"

[project.entry-points."codeprobe.agents"]
claude = "codeprobe.adapters.claude:ClaudeAdapter"
codex = "codeprobe.adapters.codex:CodexAdapter"
copilot = "codeprobe.adapters.copilot:CopilotAdapter"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = false

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
