[project]
name = "codeprobe"
version = "0.9.0"
description = "Benchmark AI coding agents against your own codebase. Mine real tasks from repo history, run agents, interpret results."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "codeprobe contributors" },
]
keywords = ["ai", "benchmark", "eval", "coding-agent", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0,<9",
    "pyyaml>=6.0,<7",
    "anthropic>=0.39,<1",
    "openai>=1.66,<3",
    "tiktoken>=0.7,<1",
    "scipy>=1.11,<2",
    "rich>=13.7,<14",
    "jinja2>=3.1,<4",
]

[project.urls]
Homepage = "https://github.com/sjarmak/codeprobe"
Repository = "https://github.com/sjarmak/codeprobe"
Issues = "https://github.com/sjarmak/codeprobe/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-PyYAML>=6.0,<7",
    "types-requests>=2.31,<3",
    "scipy-stubs>=1.11",
    "scipy>=1.11,<2",
    # Needed by tests/test_release_gate.py::test_build_and_stage_real_wheel
    # which shells out to ``python -m build --wheel`` to verify the wheel
    # produced at release time is installable and version-consistent.
    "build>=1.0,<2",
]

[project.scripts]
codeprobe = "codeprobe.cli:main"

[project.entry-points."codeprobe.agents"]
claude = "codeprobe.adapters.claude:ClaudeAdapter"
codex = "codeprobe.adapters.codex:CodexAdapter"
copilot = "codeprobe.adapters.copilot:CopilotAdapter"

[project.entry-points."codeprobe.sessions"]
claude = "codeprobe.adapters.session:ClaudeSessionCollector"
codex = "codeprobe.adapters.session:CodexSessionCollector"
copilot = "codeprobe.adapters.session:CopilotSessionCollector"

[project.entry-points."codeprobe.scorers"]
binary = "codeprobe.core.scoring:BinaryScorer"
continuous = "codeprobe.core.scoring:ContinuousScorer"
checkpoint = "codeprobe.core.scoring:CheckpointScorer"
test_ratio = "codeprobe.core.scoring:ContinuousScorer"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"codeprobe.preambles" = ["*.md", "*.j2"]
# Subpackage holding Jinja preamble templates loaded at runtime via
# FileSystemLoader (see codeprobe/preambles/templates/__init__.py). Must be
# listed explicitly — setuptools package-data is per-package, not recursive.
"codeprobe.preambles.templates" = ["*.j2", "*.md.j2"]
"codeprobe.templates" = ["*.yaml"]
"codeprobe.llm" = ["*.yaml"]
"codeprobe.cli" = ["error_codes.json"]
# Embedded Go AST scanner sourced at runtime by AstResolver via `go run`.
# Single-file program with no external deps; ships as plain text and is
# compiled on-demand by the user's local go toolchain.
"codeprobe.mining._go_ast_scanner" = ["*.go"]
# Repo-committed agent skills live outside the src/ package tree at
# .claude/skills/codeprobe-*/SKILL.md. They are the authoritative agent
# contract (see PRD §7) and must ship in the sdist so downstream tooling
# can consult them. Because package-data is scoped to files inside a
# package, inclusion of the out-of-tree .claude/skills/**/SKILL.md files
# is handled by MANIFEST.in (graft .claude/skills) + include-package-data
# below. Keep this comment in sync if the skill layout changes.

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires external services (skipped by default in CI)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = false

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# N802 — one intentional mixed-case test method name asserting on camelCase
# flag forwarding (``--disallowedTools``).
# UP028/UP042 — one-off modernizations not worth the churn in this release.
# (N818 was removed in codeprobe-6c9 — all exception classes now carry the
# ``Error`` suffix, with deprecated aliases for one minor-version cycle.)
ignore = ["N802", "UP028", "UP042"]

[tool.ruff.lint.per-file-ignores]
# One stale local var + one unused-but-kept-for-shape helper in existing tests.
"tests/test_verify.py" = ["F841"]
# Pre-existing alias intentionally re-exports the registry under a private name;
# ruff's explicit-re-export suggestion would be a larger refactor.
"src/codeprobe/cli/__init__.py" = ["F401"]
# Wide HTML template string that reads better on one line than broken up.
"src/codeprobe/snapshot/exporters/browse.py" = ["E501"]
